# cakeprotocol

./: .bazelrc  .clang-format  .clangd  .gitignore  .pre-commit  BUILD.bazel  LICENSE  MODULE.bazel  README.md  user.bazelrc
data/: BUILD.bazel  haarcascade_embedded.hpp
src/away_detector/: BUILD.bazel  away_detector.cpp  away_detector.hpp  detection_strategies.hpp  haar_cascade_strategy.cpp  haar_cascade_strategy.hpp  idle_input_strategy.cpp  idle_input_strategy.hpp
src/main/: BUILD.bazel  application.cpp  application.hpp  main.cpp
src/screen_locker/: BUILD.bazel  screen_locker.hpp
src/utils/: BUILD.bazel  json_encoder.hpp
tools/: BUILD.bazel  bazelrc.bazelrc
