load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

alias(
    name = "cakeprotocol",
    actual = "//src/main:main",
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//src/...": "--features=-parse_headers",
    },
)
