load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

config_setting(
    name = "debug_viz",
    define_values = {"debug_viz": "true"},
    visibility = ["//visibility:public"],
)

alias(
    name = "cakeprotocol",
    actual = "//src/main:main",
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//src/...": "--features=-parse_headers",
    },
)
