"""
Cake Protocol
"""

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "opencv", version = "4.13.0.bcr.5")
bazel_dep(name = "spdlog", version = "1.17.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
# Using xFile3160's fork for Bazel 9 compatibility (native.py_binary removed).
# See: https://github.com/hedronvision/bazel-compile-commands-extractor/pull/278
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    remote = "https://github.com/xFile3160/bazel-compile-commands-extractor.git",
)
