"""
This library provides a class that can detect when the user is not present at their computer
allowing the caller to take the appropriate action. In our case the screen will be locked.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "away_detector",
    srcs = ["away_detector.cpp"],
    hdrs = ["away_detector.hpp"],
    data = ["//data:haarcascades"],
    include_prefix = "away_detector",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        "@opencv//:imgproc",
        "@opencv//:objdetect",
        "@opencv//:videoio",
        "@spdlog",
    ],
)
