"""
This library provides a class that can detect when the user is not present at their computer
allowing the caller to take the appropriate action. In our case the screen will be locked.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "away_detector",
    srcs = ["away_detector.cpp"],
    hdrs = ["away_detector.hpp"],
    include_prefix = "away_detector",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        ":detection_strategies",
    ],
)

cc_library(
    name = "detection_strategies",
    hdrs = ["detection_strategies.hpp"],
    include_prefix = "away_detector",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "haar_cascade_strategy",
    srcs = ["haar_cascade_strategy.cpp"],
    hdrs = ["haar_cascade_strategy.hpp"],
    data = ["//data:haarcascades"],
    defines = select({
        "//:debug_viz": ["CAKE_DEBUG_VIZ"],
        "//conditions:default": [],
    }),
    include_prefix = "away_detector",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        ":detection_strategies",
        "@opencv//:imgproc",
        "@opencv//:objdetect",
        "@opencv//:videoio",
        "@spdlog",
    ] + select({
        "//:debug_viz": ["@opencv//:imgcodecs"],
        "//conditions:default": [],
    }),
)

cc_library(
    name = "idle_input_strategy",
    srcs = ["idle_input_strategy.cpp"],
    hdrs = ["idle_input_strategy.hpp"],
    include_prefix = "away_detector",
    strip_include_prefix = "",
    visibility = ["//visibility:public"],
    deps = [
        ":detection_strategies",
        "@spdlog",
    ],
)
