load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "main",
    srcs = [
        "application.cpp",
        "application.hpp",
        "main.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/away_detector",
        "//src/away_detector:haar_cascade_strategy",
        "//src/screen_locker",
        "//third_party:argparse",
        "@spdlog",
    ],
)
